--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>ZeusService</title>
+    <title>Zeus Service</title>
     <meta content="ZeusService menyediakan kebutuhan hosting dan ddos" name="description">
-    <meta content="apikey, bot whatsapp, rest api, vps, panel, RizzHost" name="keywords">
+    <meta content="apikey, bot whatsapp, rest api, vps, panel, Zeus Service" name="keywords">
     <link href="https://e.top4top.io/p_32352cmbg0.jpg" rel="icon">
     <link href="https://e.top4top.io/p_32352cmbg0.jpg" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -25,7 +25,7 @@
         <div class="logo">
           <h1>
             <a href="#">
-              <span>ZeusService</span>
+              <span>Zeus Service</span>
             </a>
           </h1>
         </div>
@@ -37,7 +37,7 @@
           <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
             <div data-aos="zoom-out">
               <h1>Welcome To Website <span>Zeus Service</span></h1>
-              <h2>ZeusService || Shop Website Ready Kebutuhan Hosting, ddos,c2api, Jasa Install Panel, Jasa Install Thema, Sc Bot,Dll</h2>
+              <h2>Zeus Service || Shop Website Ready Kebutuhan Hosting, DDoS, C2-API, Jasa Install Panel, Jasa Install Thema, Sc Bot,Dll</h2>
               <div class="text-center text-lg-start">
                 <a href="#pricing" class="btn-get-started">SELANJUTNYA</a>
               </div>
@@ -497,7 +497,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>ZeusService</h3>
+              <h3>Zeus Service</h3>
               <p class="pb-3"><em></em></p>
               <p>West Java,<br>Indonesian<br><br><strong>Phone:</strong> +62 852-7805-4569<br><strong>Email:</strong> nugraharizky062@gmail.com<br></p>
             </div>
@@ -510,7 +510,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="copyright">&copy; Copyright <strong><span>ZeusService</span></strong>. All Rights Reserved</div>
+      <div class="copyright">&copy; Copyright <strong><span>Zeuss Service</span></strong>. All Rights Reserved</div>
       <div class="credits">Design by <a href="https://wa.me/6283837156336">ZeusService</a></div>
     </div>
   </footer>
