--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:image" content="https://i.ibb.co.com/cynCCZQ/20240911-231348.png"/>
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel='stylesheet' type='text/css'>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>JAKARTA CYBER WHITE HERE!</title>
+    <title>ZEUSXPLOIT WAS HERE!</title>
 </head>
 <body bgcolor=black>
     <table width=100% height=100%><td align=center><br><br><br><br><br><br><br><br>
@@ -410,7 +410,7 @@ setInterval(flicker, 100);
 </script>
 </head>
 <p>
-<img src="https://g.top4top.io/p_3194bzfe10.png" style="width:400px;height:400px;" align="top">
+<img src="https://g.top4top.io/p_3194bzfe10.png" style="width:450px;height:450px;" align="top">
 <center>
 </p>
 <br>
