--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A">
     <meta name="keywords" content="ZeusDev">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="title" content="Alif Afgani - Profil Pengembang Front-End Web">
+    <meta name="title" content="ZeusDev - Profil Pengembang Front-End Web">
     <meta name="description" content="Selamat datang di website saya! Saya adalah ZeusDev, atau panggil saja saya Zeus Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini">
 
     <!-- Open Graph / Facebook -->
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://zeusexploitersx.site/">
     <meta property="og:title" content="ZeusDeveloper - Profil Pengembang Front-End Web">
     <meta property="og:description" content="Selamat datang di website saya! Saya adalah ZeusDev, atau panggil saja saya Zeys Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini">
-    <meta property="og:image" content="images/Meta.png">
+    <meta property="og:image" content="Meta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -27,8 +27,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>ZeusDev - Profil Pengembang Front-End Web</title>
-    <script type="module" crossorigin="" src="js/index-BvJXIpV-.js"></script>
-    <link rel="stylesheet" crossorigin="" href="css/index-Cmtlxnmr.css">
+    <script type="module" crossorigin="" src="index-BvJXIpV-.js"></script>
+    <link rel="stylesheet" crossorigin="" href="index-Cmtlxnmr.css">
   </head>
   <body>
     <div id="root"></div>
